# audioswitcher

./: .gitignore  404.html  CMakeLists.txt  README.md  ad_state_test.cc  all_test.cc  index.html  mkdocs.yml  ring_buffer_test.cc  schematics.kicad_sch  switch_state_test.cc  test.sh  uart_state_test.cc
.github/workflows/: build.yml
devenv/docs/.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md
firmware/: ad_state.c  ad_state.h  device.c  device.h  main.c  ringbuffer.c  ringbuffer.h  state.c  state.h  switch_state.c  switch_state.h  uart_state.c  uart_state.h
firmware/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
search/: search_index.json
